[package]
name = "rust_flockers"
version = "0.1.0"
authors = ["CarbonHell <frafonia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abm = { git = "https://github.com/spagnuolocarmine/abm" }
rand = "0.6.5"

[dependencies.amethyst]
version = "0.15.3"
features = ["vulkan"]
